Téléchargement des fichiers
Téléchargement des fichiers

--- a/index.html
+++ b/index.html
@@ -1,7 +1,70 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Divers Projets</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Header -->
+					<header id="header">
+						<div class="inner">
+
+							<!-- Logo -->
+								<a href="index.html" class="logo">
+									<span class="symbol"><img src="images/noir_tsp.png" alt="" /></span>
+								</a>
+						</div>
+					</header>
+
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+							<header>
+								<h1>Voici quelques projets &<br />
+								templates par <a href="https://davidguia.me" target="_blank">David Guia</a>.</h1>
+							</header>
+							<section class="tiles">
+								<article class="style1">
+									<span class="image">
+										<img src="images/dino.jpg" alt="" />
+									</span>
+									<a href="dino-saute/index.html">
+										<h2>Dino-Saute</h2>
+										<div class="content">
+											<p>Le jeu de dinosaure le plus impressionnant qu'il vous sera donné de voir</p>
+										</div>
+									</a>
+								</article>
+								<article class="style2">
+									<span class="image">
+										<img src="images/serpent.jpg" alt="" />
+									</span>
+									<a href="snakee/index.html">
+										<h2>Snakee</h2>
+										<div class="content">
+											<p>Le jeu de serpent le plus impressionnant qu'il vous sera donné de voir</p>
+										</div>
+									</a>
+								</article>
+							</section>
+						</div>
+					</div>
+
+				<!-- Footer -->
+					<footer></footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
