--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 										</div>
 									</a>
 								</article>
+								<article class="style4">
+									<span class="image">
+										<img src="images/avant-noel.jpg" alt="" />
+									</span>
+									<a href="avant-noel/index.html">
+										<h2>Avant Noël</h2>
+										<div class="content">
+											<p>Combien de temps avant Noël ...</p>
+										</div>
+									</a>
+								</article>
 							</section>
 						</div>
 					</div>
