--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
 								templates par <a href="https://davidguia.me" target="_blank">David Guia</a>.</h1>
 							</header>
 							<section class="tiles">
+								<article class="style5">
+									<span class="image">
+										<img src="images/travel-agency.jpg" alt="" />
+									</span>
+									<a href="travel-agency/index.html">
+										<h2>Avant Noël</h2>
+										<div class="content">
+											<p>Website for Travel Agency</p>
+										</div>
+									</a>
+								</article>
 								<article class="style1">
 									<span class="image">
 										<img src="images/dino.jpg" alt="" />
