Rajout du projet
Ajout du projet Travel Agency

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 										<img src="images/travel-agency.jpg" alt="" />
 									</span>
 									<a href="travel-agency/index.html">
-										<h2>Avant Noël</h2>
+										<h2>Travel Agency</h2>
 										<div class="content">
 											<p>Website for Travel Agency</p>
 										</div>
